--- a/snippets/cart-drawer.liquid
+++ b/snippets/cart-drawer.liquid
@@ -1,8 +1,8 @@
 {% comment %}
-Renders cart drawer
+  Renders cart drawer
 
-Usage:
-{% render 'cart-drawer' %}
+  Usage:
+  {% render 'cart-drawer' %}
 {% endcomment %}
 
 {{ 'quantity-popover.css' | asset_url | stylesheet_tag }}
@@ -14,15 +14,6 @@ Usage:
 <style>
   .drawer {
     visibility: hidden;
-  }
-
-  .cart-remove-btn {
-    flex: 1;
-    justify-content: flex-end;
-  }
-
-  .cart-remove-btn-text {
-    margin-right: 0.5rem;
   }
 </style>
 
@@ -37,126 +28,154 @@ Usage:
       tabindex="-1"
     >
       {%- if cart == empty -%}
-      <div class="drawer__inner-empty">
-        <div
-          class="cart-drawer__warnings center{% if settings.cart_drawer_collection != blank %} cart-drawer__warnings--has-collection{% endif %}">
-          <div class="cart-drawer__empty-content">
-            <h2 class="cart__empty-text">{{ 'sections.cart.empty' | t }}</h2>
-            <button class="drawer__close" type="button" onclick="this.closest('cart-drawer').close()"
-              aria-label="{{ 'accessibility.close' | t }}">
-              {% render 'icon-close' %}
-            </button>
-            <a href="{{ routes.all_products_collection_url }}" class="button">
-              {{ 'general.continue_shopping' | t }}
-            </a>
+        <div class="drawer__inner-empty">
+          <div class="cart-drawer__warnings center{% if settings.cart_drawer_collection != blank %} cart-drawer__warnings--has-collection{% endif %}">
+            <div class="cart-drawer__empty-content">
+              <h2 class="cart__empty-text">{{ 'sections.cart.empty' | t }}</h2>
+              <button
+                class="drawer__close"
+                type="button"
+                onclick="this.closest('cart-drawer').close()"
+                aria-label="{{ 'accessibility.close' | t }}"
+              >
+                {% render 'icon-close' %}
+              </button>
+              <a href="{{ routes.all_products_collection_url }}" class="button">
+                {{ 'general.continue_shopping' | t }}
+              </a>
 
-            {%- if shop.customer_accounts_enabled and customer == null -%}
-            <p class="cart__login-title h3">{{ 'sections.cart.login.title' | t }}</p>
-            <p class="cart__login-paragraph">
-              {{ 'sections.cart.login.paragraph_html' | t: link: routes.account_login_url }}
-            </p>
-            {%- endif -%}
+              {%- if shop.customer_accounts_enabled and customer == null -%}
+                <p class="cart__login-title h3">{{ 'sections.cart.login.title' | t }}</p>
+                <p class="cart__login-paragraph">
+                  {{ 'sections.cart.login.paragraph_html' | t: link: routes.account_login_url }}
+                </p>
+              {%- endif -%}
+            </div>
           </div>
+          {%- if settings.cart_drawer_collection != blank -%}
+            <div class="cart-drawer__collection">
+              {% render 'card-collection', card_collection: settings.cart_drawer_collection, columns: 1 %}
+            </div>
+          {%- endif -%}
         </div>
-        {%- if settings.cart_drawer_collection != blank -%}
-        <div class="cart-drawer__collection">
-          {% render 'card-collection', card_collection: settings.cart_drawer_collection, columns: 1 %}
-        </div>
-        {%- endif -%}
-      </div>
       {%- endif -%}
-      <div class="drawer__header drawer-padding">
+      <div class="drawer__header">
         <h2 class="drawer__heading">{{ 'sections.cart.title' | t }}</h2>
-        <button class="drawer__close" type="button" onclick="this.closest('cart-drawer').close()"
-          aria-label="{{ 'accessibility.close' | t }}">
+        <button
+          class="drawer__close"
+          type="button"
+          onclick="this.closest('cart-drawer').close()"
+          aria-label="{{ 'accessibility.close' | t }}"
+        >
           {% render 'icon-close' %}
         </button>
       </div>
-      <cart-drawer-items {% if cart==empty %} class=" is-empty" {% endif %}>
-        <form action="{{ routes.cart_url }}" id="CartDrawer-Form"
-          class="cart__contents cart-drawer__form drawer-padding" method="post">
+      <cart-drawer-items
+        {% if cart == empty %}
+          class=" is-empty"
+        {% endif %}
+      >
+        <form
+          action="{{ routes.cart_url }}"
+          id="CartDrawer-Form"
+          class="cart__contents cart-drawer__form"
+          method="post"
+        >
           <div id="CartDrawer-CartItems" class="drawer__contents js-contents">
             {%- if cart != empty -%}
-            <div class="drawer__cart-items-wrapper">
-              <table class="cart-items" role="table">
-                <thead role="rowgroup">
-                  <tr role="row">
-                    <th id="CartDrawer-ColumnProductImage" role="columnheader">
-                      <span class="visually-hidden">{{ 'sections.cart.headings.image' | t }}</span>
-                    </th>
-                    <th id="CartDrawer-ColumnProduct" class="caption-with-letter-spacing" scope="col"
-                      role="columnheader">
-                      {{ 'sections.cart.headings.product' | t }}
-                    </th>
-                    <th id="CartDrawer-ColumnTotal" class="right caption-with-letter-spacing" scope="col"
-                      role="columnheader">
-                      {{ 'sections.cart.headings.total' | t }}
-                    </th>
-                    <th id="CartDrawer-ColumnQuantity" role="columnheader">
-                      <span class="visually-hidden">{{ 'sections.cart.headings.quantity' | t }}</span>
-                    </th>
-                  </tr>
-                </thead>
+              <div class="drawer__cart-items-wrapper">
+                <table class="cart-items" role="table">
+                  <thead role="rowgroup">
+                    <tr role="row">
+                      <th id="CartDrawer-ColumnProductImage" role="columnheader">
+                        <span class="visually-hidden">{{ 'sections.cart.headings.image' | t }}</span>
+                      </th>
+                      <th
+                        id="CartDrawer-ColumnProduct"
+                        class="caption-with-letter-spacing"
+                        scope="col"
+                        role="columnheader"
+                      >
+                        {{ 'sections.cart.headings.product' | t }}
+                      </th>
+                      <th
+                        id="CartDrawer-ColumnTotal"
+                        class="right caption-with-letter-spacing"
+                        scope="col"
+                        role="columnheader"
+                      >
+                        {{ 'sections.cart.headings.total' | t }}
+                      </th>
+                      <th id="CartDrawer-ColumnQuantity" role="columnheader">
+                        <span class="visually-hidden">{{ 'sections.cart.headings.quantity' | t }}</span>
+                      </th>
+                    </tr>
+                  </thead>
 
-                <tbody role="rowgroup">
-                  {%- for item in cart.items -%}
-                  <tr id="CartDrawer-Item-{{ item.index | plus: 1 }}" class="cart-item" role="row">
-                    <td class="cart-item__media" role="cell" headers="CartDrawer-ColumnProductImage">
-                      {% if item.image %}
-                      {% comment %} Leave empty space due to a:empty CSS display: none rule {% endcomment %}
-                      <a href="{{ item.url }}" class="cart-item__link" tabindex="-1" aria-hidden="true"> </a>
-                      <img class="cart-item__image" src="{{ item.image | image_url: width: 300 }}"
-                        alt="{{ item.image.alt | escape }}" loading="lazy" width="150"
-                        height="{{ 150 | divided_by: item.image.aspect_ratio | ceil }}">
-                      {% endif %}
-                    </td>
+                  <tbody role="rowgroup">
+                    {%- for item in cart.items -%}
+                      <tr id="CartDrawer-Item-{{ item.index | plus: 1 }}" class="cart-item" role="row">
+                        <td class="cart-item__media" role="cell" headers="CartDrawer-ColumnProductImage">
+                          {% if item.image %}
+                            {% comment %} Leave empty space due to a:empty CSS display: none rule {% endcomment %}
+                            <a href="{{ item.url }}" class="cart-item__link" tabindex="-1" aria-hidden="true"> </a>
+                            <img
+                              class="cart-item__image"
+                              src="{{ item.image | image_url: width: 300 }}"
+                              alt="{{ item.image.alt | escape }}"
+                              loading="lazy"
+                              width="150"
+                              height="{{ 150 | divided_by: item.image.aspect_ratio | ceil }}"
+                            >
+                          {% endif %}
+                        </td>
 
-                    <td class="cart-item__details" role="cell" headers="CartDrawer-ColumnProduct">
-                      {%- if settings.show_vendor -%}
-                      <p class="caption-with-letter-spacing light">{{ item.product.vendor }}</p>
-                      {%- endif -%}
+                        <td class="cart-item__details" role="cell" headers="CartDrawer-ColumnProduct">
+                          {%- if settings.show_vendor -%}
+                            <p class="caption-with-letter-spacing light">{{ item.product.vendor }}</p>
+                          {%- endif -%}
 
-                      <a href="{{ item.url }}" class="cart-item__name h4 break">
-                        {{- item.product.title | escape -}}
-                      </a>
+                          <a href="{{ item.url }}" class="cart-item__name h4 break">
+                            {{- item.product.title | escape -}}
+                          </a>
 
-                      {%- if item.original_price != item.final_price -%}
-                      <div class="cart-item__discounted-prices">
-                        <span class="visually-hidden">
-                          {{ 'products.product.price.regular_price' | t }}
-                        </span>
-                        <s class="cart-item__old-price product-option">
-                          {{- item.original_price | money -}}
-                        </s>
-                        <span class="visually-hidden">
-                          {{ 'products.product.price.sale_price' | t }}
-                        </span>
-                        <strong class="cart-item__final-price product-option">
-                          {{ item.final_price | money }}
-                        </strong>
-                      </div>
-                      {%- else -%}
-                      <div class="product-option">
-                        {{ item.original_price | money }}
-                      </div>
-                      {%- endif -%}
+                          {%- if item.original_price != item.final_price -%}
+                            <div class="cart-item__discounted-prices">
+                              <span class="visually-hidden">
+                                {{ 'products.product.price.regular_price' | t }}
+                              </span>
+                              <s class="cart-item__old-price product-option">
+                                {{- item.original_price | money -}}
+                              </s>
+                              <span class="visually-hidden">
+                                {{ 'products.product.price.sale_price' | t }}
+                              </span>
+                              <strong class="cart-item__final-price product-option">
+                                {{ item.final_price | money }}
+                              </strong>
+                            </div>
+                          {%- else -%}
+                            <div class="product-option">
+                              {{ item.original_price | money }}
+                            </div>
+                          {%- endif -%}
 
-                      {%- if item.product.has_only_default_variant == false
-                      or item.properties.size != 0
-                      or item.selling_plan_allocation != null
-                      -%}
-                      <dl>
-                        {%- if item.product.has_only_default_variant == false -%}
-                        {%- for option in item.options_with_values -%}
-                        <div class="product-option">
-                          <dt>{{ option.name }}:</dt>
-                          <dd>
-                            {{ option.value -}}
-                            {%- unless forloop.last %}, {% endunless %}
-                          </dd>
-                        </div>
-                        {%- endfor -%}
-                        {%- endif -%}
+                          {%- if item.product.has_only_default_variant == false
+                            or item.properties.size != 0
+                            or item.selling_plan_allocation != null
+                          -%}
+                            <dl>
+                              {%- if item.product.has_only_default_variant == false -%}
+                                {%- for option in item.options_with_values -%}
+                                  <div class="product-option">
+                                    <dt>{{ option.name }}:</dt>
+                                    <dd>
+                                      {{ option.value -}}
+                                      {%- unless forloop.last %}, {% endunless %}
+                                    </dd>
+                                  </div>
+                                {%- endfor -%}
+                              {%- endif -%}
 
                               {%- for property in item.properties -%}
                                 {%- assign property_first_char = property.first | slice: 0 -%}
@@ -218,13 +237,10 @@ Usage:
                                 </span>
                               </div>
                             {%- else -%}
-                            {{ property.last }}
+                              <span class="price price--end">
+                                {{ item.original_line_price | money }}
+                              </span>
                             {%- endif -%}
-                          </dd>
-                        </div>
-                        {%- endif -%}
-                        {%- endfor -%}
-                      </dl>
 
                             {%- if item.variant.available and item.unit_price_measurement -%}
                               <div class="unit-price caption">
@@ -432,21 +448,25 @@ Usage:
           <div id="CartDrawer-CartErrors" role="alert"></div>
         </form>
       </cart-drawer-items>
-      <div class="drawer__footer drawer-padding">
+      <div class="drawer__footer">
         {%- if settings.show_cart_note -%}
-        <details id="Details-CartDrawer">
-          <summary>
-            <span class="summary__title">
-              {{ 'sections.cart.note' | t }}
-              {% render 'icon-caret' %}
-            </span>
-          </summary>
-          <cart-note class="cart__note field">
-            <label class="visually-hidden" for="CartDrawer-Note">{{ 'sections.cart.note' | t }}</label>
-            <textarea id="CartDrawer-Note" class="text-area text-area--resize-vertical field__input" name="note"
-              placeholder="{{ 'sections.cart.note' | t }}">{{ cart.note }}</textarea>
-          </cart-note>
-        </details>
+          <details id="Details-CartDrawer">
+            <summary>
+              <span class="summary__title">
+                {{ 'sections.cart.note' | t }}
+                {% render 'icon-caret' %}
+              </span>
+            </summary>
+            <cart-note class="cart__note field">
+              <label class="visually-hidden" for="CartDrawer-Note">{{ 'sections.cart.note' | t }}</label>
+              <textarea
+                id="CartDrawer-Note"
+                class="text-area text-area--resize-vertical field__input"
+                name="note"
+                placeholder="{{ 'sections.cart.note' | t }}"
+              >{{ cart.note }}</textarea>
+            </cart-note>
+          </details>
         {%- endif -%}
 
         <!-- Start blocks -->
@@ -455,15 +475,15 @@ Usage:
         <div class="cart-drawer__footer" {{ block.shopify_attributes }}>
           <div>
             {%- if cart.cart_level_discount_applications.size > 0 -%}
-            <ul class="discounts list-unstyled" role="list" aria-label="{{ 'customer.order.discount' | t }}">
-              {%- for discount in cart.cart_level_discount_applications -%}
-              <li class="discounts__discount discounts__discount--end">
-                {%- render 'icon-discount' -%}
-                {{ discount.title }}
-                (-{{ discount.total_allocated_amount | money }})
-              </li>
-              {%- endfor -%}
-            </ul>
+              <ul class="discounts list-unstyled" role="list" aria-label="{{ 'customer.order.discount' | t }}">
+                {%- for discount in cart.cart_level_discount_applications -%}
+                  <li class="discounts__discount discounts__discount--end">
+                    {%- render 'icon-discount' -%}
+                    {{ discount.title }}
+                    (-{{ discount.total_allocated_amount | money }})
+                  </li>
+                {%- endfor -%}
+              </ul>
             {%- endif -%}
           </div>
 
@@ -474,13 +494,13 @@ Usage:
 
           <small class="tax-note caption-large rte">
             {%- if cart.taxes_included and shop.shipping_policy.body != blank -%}
-            {{ 'sections.cart.taxes_included_and_shipping_policy_html' | t: link: shop.shipping_policy.url }}
+              {{ 'sections.cart.taxes_included_and_shipping_policy_html' | t: link: shop.shipping_policy.url }}
             {%- elsif cart.taxes_included -%}
-            {{ 'sections.cart.taxes_included_but_shipping_at_checkout' | t }}
+              {{ 'sections.cart.taxes_included_but_shipping_at_checkout' | t }}
             {%- elsif shop.shipping_policy.body != blank -%}
-            {{ 'sections.cart.taxes_and_shipping_policy_at_checkout_html' | t: link: shop.shipping_policy.url }}
+              {{ 'sections.cart.taxes_and_shipping_policy_at_checkout_html' | t: link: shop.shipping_policy.url }}
             {%- else -%}
-            {{ 'sections.cart.taxes_and_shipping_at_checkout' | t }}
+              {{ 'sections.cart.taxes_and_shipping_at_checkout' | t }}
             {%- endif -%}
           </small>
         </div>
@@ -501,13 +521,6 @@ Usage:
             {{ 'sections.cart.checkout' | t }}
           </button>
         </div>
-
-        <div class="continue-shopping">
-          <p>
-            or <strong onclick="this.closest('cart-drawer').close()">Continue Shopping<span aria-hidden="true"> →</span></strong>
-          </p>
-        </div>
-
       </div>
     </div>
   </div>
