--- a/assets/component-cart-drawer.css
+++ b/assets/component-cart-drawer.css
@@ -70,7 +70,8 @@ cart-drawer:not(.is-empty) .cart-drawer__collection {
 
 .drawer__header {
   position: relative;
-  padding: 1.5rem 0;
+  padding-top: 2.5rem;
+  padding-bottom: 2rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -87,8 +88,8 @@ cart-drawer:not(.is-empty) .cart-drawer__collection {
   min-height: 4.4rem;
   box-shadow: 0 0 0 0.2rem rgba(var(--color-button), 0);
   position: absolute;
-  top: 10px;
-  right: -10px;
+  top: 1rem;
+  right: 0;
   color: rgb(var(--color-foreground));
   background-color: transparent;
   border: none;
@@ -112,7 +113,7 @@ cart-drawer:not(.is-empty) .cart-drawer__collection {
 
 .drawer__footer {
   border-top: 0.1rem solid rgba(var(--color-foreground), 0.2);
-  padding: 1.5rem 0;
+  padding: 3rem 0;
 }
 
 cart-drawer-items.is-empty + .drawer__footer {
@@ -186,7 +187,7 @@ cart-drawer {
 
 cart-drawer-items {
   overflow: auto;
-  flex: 1;
+  //flex: 1;
 }
 
 @media screen and (max-height: 650px) {
@@ -202,12 +203,31 @@ cart-drawer-items {
 .cart-drawer .cart-item {
   display: grid;
   grid-template: repeat(2, auto) / repeat(4, 1fr);
-  gap: 1rem;
+  gap: 1.4rem;
   margin-bottom: 0;
+  padding-bottom: 1.6rem;
+  border-bottom: 0.1rem solid rgba(var(--color-foreground), 0.2);
+}
+
+
+.continue-shopping {
+  text-align: center;
+  font-size: 1.4rem;
+  margin-top: 2rem;
+}
+
+.continue-shopping strong {
+  color: rgb(var(--color-button));
+  cursor: pointer;
+}
+
+.continue-shopping strong span {
+  vertical-align: middle;
 }
 
 .cart-drawer .cart-item:last-child {
   margin-bottom: 1rem;
+  border-bottom: none;
 }
 
 .cart-drawer .cart-item__media {
@@ -216,7 +236,11 @@ cart-drawer-items {
 
 .cart-drawer .cart-item__image {
   max-width: 100%;
+  height: 100%;
+  border: 1px solid #e5e7eb;
+  border-radius: 0.4rem;
 }
+
 
 .cart-drawer .cart-items thead {
   margin-bottom: 0.5rem;
