--- a/assets/component-cart-items.css
+++ b/assets/component-cart-items.css
@@ -17,6 +17,7 @@ cart-items .title-wrapper-with-link {
 
 .cart-item__quantity-wrapper {
   display: flex;
+  align-items: flex-end;
 }
 
 .cart-item__totals {
@@ -129,7 +130,6 @@ cart-items .title-wrapper-with-link {
 
 cart-remove-button .button {
   min-width: calc(4.5rem / var(--font-body-scale));
-  min-height: 4.5rem;
   padding: 0;
   margin: 0 0.1rem 0.1rem 0;
 }
@@ -146,7 +146,6 @@ cart-remove-button .button:not([disabled]):hover {
 @media screen and (min-width: 750px) {
   cart-remove-button .button {
     min-width: 3.5rem;
-    min-height: 3.5rem;
   }
 }
 
@@ -233,7 +232,7 @@ cart-remove-button .icon-remove {
   .cart-item {
     display: grid;
     grid-template: repeat(2, auto) / repeat(4, 1fr);
-    gap: 1.5rem;
+    gap: 0.5rem !important;
     margin-bottom: 3.5rem;
   }
 
@@ -255,6 +254,7 @@ cart-remove-button .icon-remove {
 
   .cart-item__quantity-wrapper {
     flex-wrap: wrap;
+    margin-top: 1rem;
   }
 
   .cart-item__totals {
