--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -253,7 +253,7 @@
           "type": "text",
           "id": "firstText",
           "default": "Free Shipping",
-          "label": "t:sections.announcement-bar.blocks.announcement.settings.text.label"
+          "label": "t:sections.announcement-bar.blocks.announcement.settings.firstText.label"
         },
         {
           "type": "url",
