--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -143,7 +143,7 @@
 
                 <div class="block-delivery-status">
                   <strong>
-                    {{ 'shopify.checkout.shop_policies.shipping_policy' | t }}
+                    {{ 'products.product.shipping_policy_text' | t }}
                   </strong>
                   <span>
                     -
