--- a/assets/section-footer.css
+++ b/assets/section-footer.css
@@ -349,7 +349,7 @@
 @media screen and (min-width: 750px) {
   .footer-block__details-content .list-menu__item--link:hover,
   .copyright__content a:hover {
-    color: rgb(var(--color-foreground));
+    color: rgba(var(--color-button), 0.8);
     text-decoration: underline;
     text-underline-offset: 0.3rem;
   }
