--- a/assets/base.css
+++ b/assets/base.css
@@ -2078,9 +2078,10 @@ product-info .loading__spinner:not(.hidden) ~ *,
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 0.9rem;
-  bottom: 0.8rem;
-  left: 2.2rem;
+  font-size: 1rem;
+  bottom: 2.6rem;
+  left: 0.8rem;
+  font-weight: 700;
   line-height: calc(1 + 0.1 / var(--font-body-scale));
 }
 
@@ -2546,8 +2547,8 @@ product-info .loading__spinner:not(.hidden) ~ *,
 
 .header__icon,
 .header__icon--cart .icon {
-  height: 4.4rem;
-  width: 4.4rem;
+  height: 3.2rem;
+  width: 3.2rem;
   padding: 0;
 }
 
