--- a/assets/component-cart-items.css
+++ b/assets/component-cart-items.css
@@ -141,7 +141,7 @@ cart-remove-button .button:after {
 }
 
 cart-remove-button .button:not([disabled]):hover {
-  color: rgb(var(--color-foreground));
+  color: rgba(var(--color-button-text), 0.8);
 }
 
 @media screen and (min-width: 750px) {
