--- a/sections/featured-product.liquid
+++ b/sections/featured-product.liquid
@@ -633,7 +633,7 @@
               "label": "t:sections.featured-product.blocks.variant_picker.settings.picker_type.options__2.label"
             }
           ],
-          "default": "button",
+          "default": "dropdown",
           "label": "t:sections.featured-product.blocks.variant_picker.settings.picker_type.label"
         },
         {
