Disable selection on badge

--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -279,6 +279,10 @@ a.product__text {
   margin-bottom: 0.5rem;
 }
 
+.product .price__badge-sale {
+  user-select: none;
+}
+
 .product .price--sold-out .price__badge-sale {
   display: none;
 }
